2011-09-15  Andreas Kupries  <andreask@activestate.com>

	* doc/concepts.inc: Replaced the short draft notes with proper
	  text. The parts of a topology are now called 'elements' instead
	  of 'object's, to avoid confusion with the topology objects

	* doc/instance.inc: Updated to use 'element' as term for the parts
	* doc/oid.inc: of a topology.
	* doc/tcl-hwloc.man:
	* generic/object.c:
	* generic/topology.c:

	* tests/topology2.xml: New file, topology of an system using a AMD
	  Phenom 6-core CPU.

	* generic/hwloc.c: Perform our own check of path viability for
	* tests/create.test: -set_fsroot. 'hwloc_topology_set_fsroot'
	  may or may not react to a bogus path.

	* generic/bitmap.c: Exported the bitmap extraction and
	* generic/bitmap.h: result functions, for general use
	* generic/topology.c: everywhere bitmaps are handled.
	* doc/instance.inc: Starting with node/cpu set 'convert'.
	* doc/tcl-hwloc.man: Extended documentation.

	* tests/topology_convert.test: Extended and more robust (Working
	  on a synthetic configuration, not whatever the testing machine
	  has). Missing: NUMA test cases.

	* tests/create.test: Fixed left behind temp directory.

	* doc/oid.inc: New file, syntax of object identifiers.
	* doc/tcl-hwloc.man: Added section about object identifiers.

	* generic/topology.c: Fixed wrong args typo.
	* doc/instance.inc: Continued extending documentation and
	* tests/create.test: testsuite coverage of topology instance
	* tests/topology.test: methods. Reworked the testsuite a bit to
	  use XML files of saved real topologies instead of embedding
	  them. See below.
	* tests/pu4.xml: New files, saved topologies.
	* tests/topology1.xml: 

	* tests/bitmap.test: Updated test 3.0.13 to handle platform
	  differences (word size).

	* tests/convert.test: Renamed/deleted. Added a 'topology_'
	* tests/cpu_node_set.test: prefix to clarify what section
	* tests/cpubind.test: of the API they belong to.
	* tests/membind.test:
